stretch book fix

--- a/style.css
+++ b/style.css
@@ -397,8 +397,7 @@ line-height: normal;
     display: flex;
     padding: 80px 100px;
     flex-direction: column;
-    align-items: center;
-
+    align-items: stretch;
     justify-content: center;
     gap: 10px;
     align-self: stretch;
@@ -413,12 +412,11 @@ line-height: normal;
     margin-right: auto;*/
     flex-direction: column;
     align-items: flex-start;
-    align-self: stretch;
-
-    
-
-    /*width: 100%;*/    
+    align-self: center;
+    max-width: 900px;
+    width: 100%;
     border-radius: 60px;
+    flex: 0 1 auto;
     background-image: url("images/txtr.png"), url("images/Blur-Book.svg"), linear-gradient(180deg, #ECC787 0%, #E9766C 100%);
     background-size: 100px 100px, 800px 100%, auto;
     background-repeat: repeat, no-repeat, no-repeat;
